--- a/src/dialog/mainwindow.ui
+++ b/src/dialog/mainwindow.ui
@@ -74,6 +74,8 @@
     <addaction name="actionAcknowledgement_2"/>
     <addaction name="separator"/>
     <addaction name="actionRole_assign_table"/>
+    <addaction name="separator"/>
+    <addaction name="actionAbout_New_Button"/>
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
@@ -423,6 +425,11 @@
   <action name="actionManage_Ban_IP">
    <property name="text">
     <string>Manage Ban IP</string>
+   </property>
+  </action>
+  <action name="actionAbout_New_Button">
+   <property name="text">
+    <string>About New Button</string>
    </property>
   </action>
  </widget>
